--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,8 +23,6 @@ body {
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2); 
 }
 
-
-
 button {
     margin: 10px;
     padding: 8px;
@@ -67,7 +65,6 @@ input[type="number"] {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil */
 }
 
-
 #feedback {
     text-align: center;
     width: 80%;
@@ -75,4 +72,13 @@ input[type="number"] {
     margin: 10px auto;
 }
 
+.mayor {
+    color: #d9534f; /* Rojo para mayor */
+    font-weight: bold;
+}
+
+.menor {
+    color: #007bff; /* Azul para menor */
+    font-weight: bold;
+}
 
